[package]
name = "stryke-scrape"
version = "0.2.0"
edition = "2021"
description = "Web scraping / crawling cdylib for stryke — fetch, crawl, sitemap, plus pure CSS / table / link / structured-data extraction. Wraps spider"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-scrape"
homepage = "https://menketechnologies.github.io/stryke-scrape/"
publish = false

[lib]
name = "stryke_scrape"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Concurrency-first HTTP crawler engine. We do not reimplement crawling — spider
# is the durable, vendored engine; this cdylib only exposes it to stryke and
# layers extraction on top. `sitemap` adds crawl_sitemap(); default features
# keep the reqwest HTTP path (no headless chrome).
spider = { version = "2", features = ["sitemap"] }
# html5ever-backed CSS selection for the pure (no-network) extraction engines.
scraper = "0.20"
# Absolute-URL resolution for link extraction.
url = "2"
# Embedded multi-thread runtime: spider's crawl/scrape are async; the cdylib
# drives them with block_on so the stryke side stays a plain JSON call.
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
